--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -1,5 +1,5 @@
 # week07/.github/workflows/backend_ci.yml
-#change in comment to trigger this backend
+#change in comment to trigger this backend CODE
 
 name: Backend CI - Test, Build and Push Images to ACR
 
