Trigger backend CI workflow

--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -1,5 +1,7 @@
 # week07/.github/workflows/backend_ci.yml
 #change in comment to trigger this backend code
+# Triggering CI for SIT722
+
 
 name: Backend CI - Test, Build and Push Images to ACR
 
